# Shop-Smart---A-recommendation-Agent-System

./: .env.example  README.md  pyproject.toml
output/: mongo_data.md  recommendation.md
src/mongo_recommender/: crew.py  main.py
src/mongo_recommender/config/: agents.yaml  tasks.yaml
